--- a/assets/css/customstyles.css
+++ b/assets/css/customstyles.css
@@ -43,7 +43,7 @@
     width: 100%;
     height: 100%;
     border: 6px solid rgba(0, 0, 0, 0.2); /* Outer ring color */
-    border-top: 6px solid #fc2323; /* Color of the rotating part */
+    border-top: 6px solid #000000c0; /* Color of the rotating part */
     border-radius: 50%;
     animation: spin 1.5s linear infinite;
     box-sizing: border-box; /* Ensure border is included in dimensions */
