add: video gallery, social links, services icons

--- a/assets/css/customstyles.css
+++ b/assets/css/customstyles.css
@@ -32,7 +32,7 @@
     border-radius: 50%;
     overflow: hidden;
     /* box-shadow: 0 0 5px #ffffff;  */
-    animation: glow 1.5s infinite; /* Glowing effect animation */
+    animation:  1.5s infinite; /* Glowing effect animation */
 }
 
 /* Rotating ring effect */
