--- a/assets/css/customstyles.css
+++ b/assets/css/customstyles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Anek+Gujarati:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 /* Preloader container styling */
 .preloader-container {
@@ -77,6 +78,29 @@
         transform: rotate(360deg);
     }
 }
+
+.banner-text {
+    font-family: "DM Sans", Arial, Helvetica, sans-serif;
+    /* text-align: start; */
+    color: #000;
+}
+
+.banner-container {
+    min-height: 100;
+    min-width: 100%;
+}
+
+.swiper-slide {
+    filter: brightness(10px);
+    color: #000 !important;
+}
+
+h2.banner-text {
+    font-family: "DM Sans", Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    color: #000;
+}
+
 
 h5.gujarati-text {
     font-family: 'Anek Gujarati', 'Roboto', sans-serif;
