--- a/assets/css/customstyles.css
+++ b/assets/css/customstyles.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Anek+Gujarati:wght@100..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
+* {
+    font-family: "DM Sans", "Roboto", Arial, Helvetica, sans-serif;
+}
+
 /* Preloader container styling */
 .preloader-container {
     position: fixed;
@@ -24,8 +28,8 @@
 }
 
 .preloader-logo {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,13 +47,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border: 6px solid rgba(0, 0, 0, 0.2); /* Outer ring color */
-    border-top: 6px solid #000000c0; /* Color of the rotating part */
+    border: 5px solid rgba(100, 100, 100, 0.436);
+    border-top: 5px solid #ff9d00; 
     border-radius: 50%;
-    animation: spin 1.5s linear infinite;
+    animation: spin 1.5s ease-in-out infinite;
     box-sizing: border-box; /* Ensure border is included in dimensions */
     z-index: 1; /* Ensure it’s on top of the preloader-logo */
 }
+
 
 /* Keyframes for glowing animation */
 @keyframes glow {
@@ -78,6 +83,14 @@
         transform: rotate(360deg);
     }
 }
+
+
+@media (max-width: 768px) {
+    .banner {
+      background-position: center;
+      background-size: cover; /* Ensure it covers the area properly */
+    }
+  }
 
 .banner-text {
     font-family: "DM Sans", Arial, Helvetica, sans-serif;
@@ -113,3 +126,13 @@ h5.gujarati-text {
     font-size: 1.3rem;
     color: #000;
 }
+
+/* Default size for preloader */
+  /* Smaller size for mobile devices */
+  /* @media (max-width: 768px) {
+    .preloader-content {
+      width: 50px; 
+      height: 50px;
+    }
+  } */
+  
